check_output_v16.txt
    Checking racing-wheel-engine v0.1.0 (H:\Code\Rust\OpenRacing\crates\engine)
error[E0432]: unresolved import `windows::Win32::Devices::DeviceAndDriverInstallation`
  --> crates\engine\src\hid\windows.rs:32:30
   |
32 | use windows::Win32::Devices::DeviceAndDriverInstallation::{
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^ could not find `DeviceAndDriverInstallation` in `Devices`
   |
note: found an item that was configured out
  --> C:\Users\Steven\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\windows-0.62.2\src\Windows\Win32\Devices\mod.rs:16:9
   |
15 | #[cfg(feature = "Win32_Devices_DeviceAndDriverInstallation")]
   |       ----------------------------------------------------- the item is gated behind the `Win32_Devices_DeviceAndDriverInstallation` feature
16 | pub mod DeviceAndDriverInstallation;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `AvRevertMmThreadCharacteristics`
  --> crates\engine\src\hid\windows.rs:23:5
   |
23 |     AvRevertMmThreadCharacteristics, AvSetMmThreadCharacteristicsW,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0432`.
warning: `racing-wheel-engine` (lib) generated 1 warning
error: could not compile `racing-wheel-engine` (lib) due to 1 previous error; 1 warning emitted
